src/main/resources/static/css/card.css
.card-layout {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    gap: 1rem;
}

.card-layout img {
    max-height: 20rem;
    border-radius: var(---border-radius);
}

.card-info {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    max-width: 15rem;
    max-height: 20rem;
    overflow: hidden;
    gap: 1em;
    align-self: center;
    min-width: 15rem;
}

.card-product-info h3 {
    color: var(---secondText);
}

.card-product {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    gap: 1rem;
    overflow: hidden;
    width: fit-content;
}

svg {
    width: 1rem;
    height: 1rem;
    display: flex;
}

.hover {
    border-radius: var(---border-radius);
    padding: 1rem;
    transition: var(---transition-time);
}

.hover:hover {
    background-color: var(---secondBackground);
    border-radius: var(---border-radius);
}

.card-grid {
    display: grid;
    align-items: flex-start;
    padding: 2%;
    gap: 2rem;
    width: 100%;
    grid-template-columns: repeat(3, 1fr);
}

@media (min-width: 2488px) {

    .card-grid {
        grid-template-columns: repeat(4, 1fr);
    }

    .hover {
        display: flex;
        flex-direction: column;
        align-items: center;
    }
}


@media (max-width: 1024px) {

    .card-grid {
        grid-template-columns: repeat(2, 1fr);
    }

}

@media (max-width: 768px) {
    .card-layout img{
        max-height: 10rem;
    }

    .card-layout {
        align-items: center;
    }

    .card-grid {
        grid-template-columns: repeat(1, 1fr);
    }

}

